# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml  production.yaml
migrations/: 20241111181118_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
