[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
reqwest = "0.12.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.14.1"
chrono = "0.4.38"
uuid = { version = "1", features = ["v4"] }


[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
