[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.14.1"
chrono = "0.4.38"
uuid = { version = "1", features = ["v4"] }
log = "0.4.22"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.14"
serde-aux = "4.5.0"
unicode-segmentation = "1.12.0"
claims = "0.7.1"
validator = "0.18.1"
fake = "3.0.0"
quickcheck = "1.0.3"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.reqwest]
version = "0.12.8"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claims = "0.7.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
serde_json = "1.0.132"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.6.2"
